--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+logging.level.org.springframework:DEBUG
 
+# Enabling H2 Console
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:friends;DB_CLOSE_ON_EXIT=FALSE
+spring.h2.console.path=/h2
